--- a/app/assets/stylesheets/constant_view.css.scss
+++ b/app/assets/stylesheets/constant_view.css.scss
@@ -2,35 +2,17 @@
   padding: 50px 0px 0px 15em;
 }
 
-#top-bar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 50px;
-  background-color: #333;
+#site_title {
   color: white;
+  font-size: 17px;
 }
 
-#top-bar li {
-  display: inline;
-  color: white;
-}
-
-#site-title {
-  float: left;
-}
 #username {
   float: right;
   margin-right: 10px;
 }
 
-#signout {
-  float: right;
-  margin-right: 10px;
-}
-
-#side-bar {
+#side_bar {
   position: absolute;
   width: 14em;
   height: 100%;
@@ -42,16 +24,15 @@
   padding: 0;
 }
 
-#side-bar li {
+#side_bar li {
   // Remove this once other sidebar items are links
   color: white;
   margin: 0px 0px 0px 5px;
   padding: 0;
   list-style: none;
 }
-#side-bar a {
+#side_bar a {
   color: white;
-  background: #333;
   display: block;
   margin: 0;
   padding: 8px 4px;
@@ -59,7 +40,7 @@
   font-weight: normal;
 }
 
-#side-bar a:hover {
+#side_bar a:hover {
   color: #2580a2;
 }
 
@@ -67,13 +48,7 @@
   font-size: 18px;
 }
 
-.sub-title {
+.sub_title {
   font-size: 15px;
   text-indent: 10px;
-}
-
-#signUp {
-position:relative;
-left: 40%;
-margin-top:50%;
 }
