--- a/app/views/layouts/_constant.html.erb
+++ b/app/views/layouts/_constant.html.erb
@@ -1,29 +1,34 @@
 <div id='cssmenu'>
 <ul>
-  <li><a href='#'><span>MeetMyClassMates</span></a></li>
+  <li id="site_title"><b>MeetMyClassmates</b></li>
   <li class='active has-sub' id='setting'><a href='#'><span><%= current_user.email %></span></a>
-    <ul>
-      <li class='last' id="topRight"><%= link_to 'User Page', user_show_path(current_user) %></li>
-      <li class='last' id="topRight"><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
+    <ul id="drop_down">
+      <li class='last topRight' id="user_page"><%= link_to 'User Page', user_show_path(current_user) %></li>
+      <li class='last topRight' id="sign_out"><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %></li>
     </ul>
   </li>
 </ul>
 </div>
 
-<ul id="side-bar">
+<ul id="side_bar">
   <li class="title"><%= link_to 'Home', root_path %></li>
 
   <br>
 
   <li class="title">My Study Groups</li>
-  <li class="sub-title">CS170 HWs</li>
-  <li class="sub-title">CS169 Project</li>
+  <% if current_user.studygroups.empty? %>
+    <li class="sub_title">You're not in any study groups.</li>
+  <% else %>
+    <% current_user.studygroups.each do |studygroup| %>
+      <li class="sub_title"><%= link_to studygroup.title, studygroups_show_path(studygroup) %></li>
+    <% end %>
+  <% end %>
 
   <br>
 
   <li class="title">Unscheduled Groups</li>
-  <li class="sub-title">CS162 MT1</li>
-  <li class="sub-title">CS168 MT2</li>
+  <li class="sub_title">CS162 MT1</li>
+  <li class="sub_title">CS168 MT2</li>
 </ul>
 
 
