got updated form to work in a barebones manner with PR edits

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -30,7 +30,7 @@
     $('.calendar').fullCalendar(calendar_options);
 
     //$('.calendar').fullCalendar(full_calendar_options);
-    console.log(full_calendar_options);
+    //console.log(full_calendar_options);
 
 </script>
 
