--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -14,6 +14,11 @@
 <!-- don't delete for debugging for purpose-->
 <!--   <p class="notice"><%= notice %></p> -->
 <!--   <p class="alert"><%= alert %></p> -->
-  <%= yield %>
+
+  <center><div class='main-notifications'>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+ </div></center>
+ <%= yield %>
 </body>
 </html>
