--- a/app/assets/stylesheets/drop-down.css
+++ b/app/assets/stylesheets/drop-down.css
@@ -8,20 +8,20 @@
   padding: 0;
 }
 #cssmenu {
-  height: 35px;
+  height: 50px;
   display: block;
-  border: 1px solid;
+  border: 0px solid;
   border-radius: 0px;
-  width: 99%;
+  width: 100%;
   border-color: #080808;
   margin: 0;
-  padding: 7px;
   left:0;
   top:0;
   position: absolute;
 }
 #cssmenu > ul {
   list-style: inside none;
+  height:100%;
   margin: 0;
   padding: 0;
 }
@@ -39,6 +39,7 @@
   float: left;
   display: inline-block;
   position: relative;
+  height:100%;
   margin: 0;
   padding: 0;
 }
