--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
 </head>
 <body>
   <!-- Don't delete for debugging purpose -->
-<!--   <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p> -->
+  <center><div class='main-notifications'>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+ </div></center>
     <%= render :partial => 'layouts/constant' %>
   <div id="main">
     <% if flash[:success] %>
