--- a/app/assets/stylesheets/typeheadjs1.css
+++ b/app/assets/stylesheets/typeheadjs1.css
@@ -49,7 +49,7 @@ html {
     height:100%;
 }
 
-.newPage {
+.new-page {
     background-color: rgba(192,192,192,0.8);
     width: 250px;
     padding: 25px;
