--- a/app/views/constant/_banner.html.erb
+++ b/app/views/constant/_banner.html.erb
@@ -1,5 +1,5 @@
 <div id="the-basics">
-  <input class="typeahead" type="text" placeholder="What Course?">
+  <input id="enroll_input" class="typeahead" type="text" placeholder="What Course?">
 </div>
 
 <script>
