--- a/app/views/studygroups/new.html.erb
+++ b/app/views/studygroups/new.html.erb
@@ -134,7 +134,7 @@
 
     <div id="the-basics">
       <%= label_tag :course %><br>
-      <input class="typeahead" type="text" name="course" placeholder="What Course?">
+      <input class="typeahead" type="text" name="course" placeholder="What Course?" id="hahaha">
       <script>
           $(document).ready(function() {
               var substringMatcher = function(strs) {
