--- a/app/views/studygroups/new.html.erb
+++ b/app/views/studygroups/new.html.erb
@@ -187,6 +187,12 @@
     document.getElementById("minsize").defaultValue = 1;
     document.getElementById("maxsize").defaultValue = 6;
 
+    function isValidDate(s) {
+      var bits = s.split('/');
+      var d = new Date(bits[2], bits[1] - 1, bits[0]);
+      return d && (d.getMonth() + 1) == bits[1] && d.getDate() == Number(bits[0]);
+    }
+
     function validateForm() {
         var errors = [];
 
@@ -196,8 +202,8 @@
         }
 
         var date = document.forms["add"]["date"].value;
-        if (date == null || date == "") {
-            errors.push("Please Enter a Date");
+        if (date == null || date == "" || isValidDate(date)) {
+            errors.push("Please Enter a Valid Date");
         }
 
         var location = document.forms["add"]["location"].value;
@@ -242,10 +248,13 @@
 
         if (errors.length > 0){
             alert(errors[0]);
+            console.log("error json: ", errors[0])
             return false;
         }
         else{
             return true;
         }
+
+
     }
 </script>
