--- a/app/views/user_mailer/invite_email.html.erb
+++ b/app/views/user_mailer/invite_email.html.erb
@@ -6,7 +6,7 @@
 <body>
 <h1>Hello,</h1>
 <p>
-  You've been invited by  <%= @inviter.email %>.<br> to join a studygroup!
+  You've been invited by  <%= @inviter %>.<br> to join a studygroup!
 </p>
 <p>
   To join, follow this link to the studygroup's info page: <%= @url %> and click join.
