--- a/app/views/layouts/_constant.html.erb
+++ b/app/views/layouts/_constant.html.erb
@@ -1,6 +1,18 @@
 <div id='cssmenu'>
 <ul>
-  <li id="site_title"><b style="line-height: 45px">MeetMyClassmates</b></li>
+  <li id="site_title"><%= link_to 'MeetMyClassMates', root_path %></li>
+  <li class='active has-sub title' ><a href='#'>My Study Groups</a>
+    <ul>
+      <% if current_user.studygroups.empty? %>
+        <li> You're not in any study groups</li>
+      <% else %>
+        <%current_user.studygroups.each do |studygroup| %>
+          <li class='last'><%= link_to studygroup.name, studygroup_show_path(studygroup) %></li>
+        <% end %>
+      <% end %>
+    </ul>
+  </li>  
+
   <li class='active has-sub' id='setting'><a href='#'><span style="line-height: 20px"><%= current_user.email %></span></a>
     <ul id="drop_down">
       <li class='last topRight' id="create_group"><%= link_to 'Create New Group', new_studygroups_url %></li>
@@ -11,7 +23,7 @@
 </ul>
 </div>
 
-<ul id="side_bar">
+<!-- <ul id="side_bar">
   <li class="title"><%= link_to 'Home', root_path %></li>
 
   <br>
@@ -30,6 +42,6 @@
   <li class="title">Unscheduled Groups</li>
   <li class="sub_title">CS162 MT1</li>
   <li class="sub_title">CS168 MT2</li>
-</ul>
+</ul> -->
 
 
