invite email fix url

--- a/app/views/user_mailer/invite_email.html.erb
+++ b/app/views/user_mailer/invite_email.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+c<!DOCTYPE html>
 <html>
 <head>
   <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
@@ -9,7 +9,7 @@
   You've been invited by  <%= @inviter %>.<br> to join a studygroup!
 </p>
 <p>
-  To join, follow this link to the studygroup's info page: <%= @url %> and click join.
+  To join, follow this link to the studygroup's info page: <a href="<%= @url %>"><%= @url %></a> and click join.
 </p>
 <p>Have a great day!</p>
 </body>
