--- a/app/assets/stylesheets/constant_view.css.scss
+++ b/app/assets/stylesheets/constant_view.css.scss
@@ -1,8 +1,11 @@
 #main {
   float: left;
-  width: -webkit-calc(100% - 199px);
+  width: -webkit-calc(100%);
   width: -moz-calc(100% - 199px);
-  padding-left: 10px;
+  padding-left: 121px;
+  padding-right: 100px;
+  background-color: rgba(175, 199, 198,1);
+  height: 100%;
 }
 
 #site_title {
