--- a/app/assets/stylesheets/drop-down.css
+++ b/app/assets/stylesheets/drop-down.css
@@ -186,7 +186,7 @@
   background: #3c3c3c;
   background: -moz-linear-gradient(top, #3c3c3c 0%, #222222 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3c3c3c), color-stop(100%, #222222));
-  background: -webkit-linear-gradient(top, #3c3c3c 0%, #222222 100%);
+  background: -webkit-linear-gradient(top, #747474 0%, rgba(0, 0, 0, 0.86) 100%);
   background: -o-linear-gradient(top, #3c3c3c 0%, #222222 100%);
   background: -ms-linear-gradient(top, #3c3c3c 0%, #222222 100%);
   background: linear-gradient(top, #3c3c3c 0%, #222222 100%);
