--- a/app/assets/stylesheets/typeheadjs1.css
+++ b/app/assets/stylesheets/typeheadjs1.css
@@ -108,7 +108,7 @@ html {
 body {
     padding: 0;
     margin: 0;
-    overflow: hidden;
+    /*overflow: hidden;*/
     height: 100%;
     width: 100%;
 }
